[tool:pytest]
testpaths = tests
addopts = --ignore=examples --ignore=das_generator --doctest-modules --cov-report term-missing --cov das_generator --black
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
